# backend

./: Cargo.toml  config.dev.toml  config.toml
.github/workflows/: test.yml
academy/: Cargo.toml
academy/src/environment/: mod.rs  types.rs
academy_api/rest/: Cargo.toml
academy_api/rest/src/: lib.rs
academy_api/rest/src/models/: coin.rs  mod.rs
academy_api/rest/src/routes/: coin.rs  internal.rs  mod.rs  (+1 more)
academy_config/src/: lib.rs
academy_core/coin/contracts/: Cargo.toml
academy_core/coin/contracts/src/: coin.rs  lib.rs
academy_core/coin/impl/: Cargo.toml
academy_core/coin/impl/src/: coin.rs  lib.rs
academy_core/coin/impl/src/tests/: add_coins.rs  get_balance.rs  mod.rs
academy_core/internal/impl/: Cargo.toml
academy_core/paypal/contracts/: Cargo.toml
academy_core/paypal/impl/: Cargo.toml
academy_core/user/impl/: Cargo.toml
academy_di/src/: lib.rs
academy_extern/contracts/src/: paypal.rs
academy_extern/impl/src/: lib.rs  paypal.rs
academy_extern/impl/tests/: paypal.rs
academy_models/src/: coin.rs  lib.rs  paypal.rs
academy_persistence/contracts/src/: coin.rs  lib.rs  paypal.rs
academy_persistence/postgres/migrations/: 20241019162212_create_coins_table.down.sql  20241019162212_create_coins_table.up.sql  20241021172908_create_paypal_orders_table.down.sql  20241021172908_create_paypal_orders_table.up.sql
academy_persistence/postgres/src/: coin.rs  lib.rs  paypal.rs
academy_testing/src/: lib.rs  main.rs  oauth2.rs  paypal.rs
nix/: dev.nix
nix/tests/: coin.py  default.nix  internal.py  paypal.py  session.py  user.py  utils.py
(+19 files in other folders)
