[package]
name = "academy_core_coin_contracts"
version.workspace = true
edition.workspace = true
publish.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
academy_models.workspace = true
anyhow.workspace = true
thiserror.workspace = true
